--- a/build.gradle
+++ b/build.gradle
@@ -7,6 +7,8 @@ repositories {
 }
 
 dependencies {
+    compile group: 'org.jsoup', name: 'jsoup', version: '1.10.2'
+    compile group: 'io.vavr', name: 'vavr', version: '0.9.0'
     compile group: 'commons-io', name: 'commons-io', version: '2.5'
     testCompile group: 'org.spockframework', name: 'spock-core', version: '1.0-groovy-2.4'
 }
