--- a/build.gradle
+++ b/build.gradle
@@ -7,6 +7,9 @@ repositories {
 }
 
 dependencies {
+    compile group: 'org.deeplearning4j', name: 'deeplearning4j-core', version: '0.8.0'
+    compile group: 'org.deeplearning4j', name: 'deeplearning4j-nlp', version: '0.8.0'
+    compile group: 'org.nd4j', name: 'nd4j-native-platform', version: '0.8.0'
     compile group: 'uk.ac.gate', name: 'gate-core', version: '8.4'
     compile group: 'org.jsoup', name: 'jsoup', version: '1.10.2'
     compile group: 'io.vavr', name: 'vavr', version: '0.9.0'
@@ -26,6 +29,14 @@ task labelSeminars(type: JavaExec) {
     args = [project.hasProperty('seminarsDir') ? project.property('seminarsDir'): '',
             project.hasProperty('cleanSeminarsFile') ? project.property('cleanSeminarsFile'): '',
             project.hasProperty('gatePath') ? project.property('gatePath'): '',
+            project.hasProperty('resultFile') ? project.property('resultFile'): '']
+    classpath = sourceSets.main.runtimeClasspath
+}
+
+task vectorizeSeminars(type: JavaExec) {
+    main = 'pl.edu.pw.elka.data.preprocessing.seminars.SeminarVectorMapper'
+    args = [project.hasProperty('labelsFile') ? project.property('labelsFile'): '',
+            project.hasProperty('vectors') ? project.property('vectors'): '',
             project.hasProperty('resultFile') ? project.property('resultFile'): '']
     classpath = sourceSets.main.runtimeClasspath
 }
